--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "PHP": ">=5.6",
-        "fastd/session": "dev-master"
+        "fastd/session": "^0.1"
      },
     "autoload": {
         "psr-4": {
